Update fix image showing on mobile size

--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -24,6 +24,12 @@
     display: none;
 }
 
+.product-image-mobile {
+    display: block;
+    max-width: 350px;
+    border-radius: 15px 15px 0 0;
+}
+
 .container {
     display: flex;
     min-height: 100vh;
