--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,12 @@
     font-family: 'Montserrat', sans-serif;
     color: var(--dark-grayish-blue);
     text-transform: uppercase;
+    font-weight: 500;
 }
 
 .product-name {
     font-family: 'Fraunces', serif;
-    max-width: 200px;
+    max-width: 250px;
     font-weight: 700;
     font-size: 2rem;
 }
@@ -70,9 +71,9 @@
 .description {
     font-family: 'Montserrat', sans-serif;
     color: var(--dark-grayish-blue);
-    font-size: 1rem;
-    max-width: 350px;
-    text-align: start;
+    font-size: 1.2rem;
+    max-width: 275px;
+    text-align: left;
 }
 
 .price-container {
@@ -101,8 +102,5 @@
     padding: 15px;
     width: 100%;
     font-family: 'Montserrat', sans-serif;
-}
-
-.cart-button :hover {
-    background-color: var(--very-dark-blue)
+    cursor: pointer;
 }
